--- a/bye.html
+++ b/bye.html
@@ -99,7 +99,7 @@ body, html {height: 100%}
 </div> -->
 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
     <div class="image">
-      <a class="logo" href="#"><img src="img/Picture1.png"></a>
+      <a class="logo" href="#"><img src="Picture1.png"></a>
       </div>
     </nav>
 
@@ -109,7 +109,7 @@ body, html {height: 100%}
       <input type="text" placeholder="Search.." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
       <div class="image2">
-        <a class"logo" href="#"><img src="img/Picture1.png"></a>
+        <a class"logo" href="#"><img src="Picture1.png"></a>
     </form>
   </div>
 </div>
