--- a/SearchTest.html
+++ b/SearchTest.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Default Map</title>
+  <title>Search Test</title>
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -79,34 +79,37 @@ var service;
 var request;
 
 function initMap() {
-  var nothardcoded = new google.maps.LatLng(43.2609,-79.9192);
+  var nothardcoded = new google.maps.LatLng(43.2609,-89.9192);
 
   map = new google.maps.Map(document.getElementById('map'), {
       center: nothardcoded,
       zoom: 12
     });
 
-  // if (navigator.geolocation) {
-    // navigator.geolocation.getCurrentPosition(function(position) {
-        // pos = {
-              // lat: position.coords.latitude,
-              // lng: position.coords.longitude
-            // };
-            // map.setCenter(pos);
-  //           var marker = new google.maps.Marker({
-  //             position: pos,
-  //             map: map,
-  //             title: "This Place",
-  //             animation: google.maps.Animation.DROP
-  //           });
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+        var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+            map.setCenter(pos);
+            var marker = new google.maps.Marker({
+              position: pos,
+              map: map,
+              title: "This Place",
+              animation: google.maps.Animation.DROP
+            });
             
-          // });
-        // }
+          });
+  }
+  search('walmart', map.center);
+}
 
+function search(loca, currentLoca){
   request = {
-    location: nothardcoded,
+    location: currentLoca,
     radius: '5000',
-    query: 'walmart'
+    query: loca
   };
 
   service = new google.maps.places.PlacesService(map);
@@ -115,10 +118,10 @@ function initMap() {
 
 function createMarker(place) {
 
-    new google.maps.Marker({
-        position: place.geometry.location,
-        map: map
-    });
+  new google.maps.Marker({
+      position: place.geometry.location,
+      map: map
+  });
 }
 
 function callback(results, status) {
