--- a/SearchTest.html
+++ b/SearchTest.html
@@ -5,9 +5,17 @@
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
     <style type="text/css">
       #map {
-        height: 100%;
+        position: absolute;
+        height: 85%;
+        width: 70%;
+        bottom: 0;
+        right: 0;
       }
 
       html, body {
@@ -15,71 +23,116 @@
         margin: 0;
         padding: 0;
       }
+      .bgimg {
+        background-image: url('https://wallpaperplay.com/walls/full/d/1/c/26997.jpg');
+        height: 15%;
+        left: 0;
+        top: 0%;
+        width: 100%;
+        background-size: cover;
+      }
+      .form-controlmy-0py-1 {
+        position: fixed;
+        width: 30%;
+        left: 35%;
+        right: 35%;
+        top: 60%;
+
+      }
+
+      .navbar-brand {
+        position: fixed;
+        width: 20%;
+        left: 3%;
+        right: 87%;
+        top: 0%;
+      }
+      .topnav .search-container {
+        position: fixed;
+        top: 0%;
+        width: 50%;
+        left: 25%;
+        right: 25%;
+        height: 15%;
+      }
+
+      .topnav input[type=text] {
+        position: absolute;
+        padding: 6px;
+        margin-top: 7%;
+        left: 20%;
+        font-size: 17px;
+        border: 1px solid #ccc;
+        width: 50%;
+      }
+
+      .topnav .search-container button {
+        position: fixed;
+        padding: 6px 10px;
+        top: 5%;
+        left: 61%;
+        background: #ddd;
+        font-size: 17px;
+        border: none;
+        cursor: pointer;
+      }
+
+      .topnav .search-container button:hover {
+        background: #ccc;
+      }
+
+      @media screen and (max-width: 600px) {
+        .topnav .search-container {
+          float: none;
+        }
+        .topnav a, .topnav input[type=text], .topnav .search-container button {
+          float: none;
+          display: block;
+          text-align: left;
+          width: 100%;
+          margin: 0;
+          /*padding: 14px;*/
+        }
+        .topnav input[type=text] {
+          border: 1px solid #ccc;  
+        }
     </style>
 </head>
 <body>
+
     <div id="map"></div>
+    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+      <div class="w3-display-middle">
+        <h1 class="w3-jumbo w3-animate-top">Doridos</h1>
+        <hr class="w3-border-grey" style="margin:auto;width:40%">
+        <p class="w3-large w3-center">Shopping Conveniently</p>
+      </div>
+    <div class="input-group md-form form-sm form-1 pl-0"></div>
+      <div class="input-group-prepend"></div>
 
-    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDB0cKOpcb9uFhKGNQOlzzr8SKwtSHt4_8&libraries=places"></script> -->
+    <!-- <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+        <div class="image">
+          <a class="logo" href="#"><img src="Picture1.png"></a>
+          </div>
+        </nav> -->
 
-    <script type="text/javascript">
-//       var map;
-//       var service;
-//       var request;
-//       function initMap() {
-//         map = new google.maps.Map(document.getElementById('map'), {
-//           center: {lat: -34.397, lng: 150.644},
-//           zoom: 11
-//         });
+    <div class="topnav">
+      <div class="search-container" class="img-responsive">
+        <form>
+          <input type="text" placeholder="Search.." id='search'>
+          <button type='button' class='fa fa-search' onclick="username()"></button>
+        </form>
+      </div>
+    </div>
 
-//         if (navigator.geolocation) {
-//           navigator.geolocation.getCurrentPosition(function(position) {
-//             var pos = {
-//               lat: position.coords.latitude,
-//               lng: position.coords.longitude
-//             };
-//             map.setCenter(pos);
-//             var marker = new google.maps.Marker({
-//               position: pos,
-//               map: map,
-//               title: "This Place",
-//               animation: google.maps.Animation.DROP
-//             });
-//             request = {
-//               location: pos,
-//               radius: '2000',
-//               query: 'walmart'
-//             };
-//           });
-//         }
-//         service = new google.maps.places.PlacesService(map);
-//         service.textSearch(request, callback);
-//       }
-
-// function createMarker(place) {
-
-//     new google.maps.Marker({
-//         position: place.geometry.location,
-//         map: map
-//     });
-// }
-
-// function callback(results, status) {
-//   console.log(status);
-//   if (status == google.maps.places.PlacesServiceStatus.OK) {
-//     for (var i = 0; i < results.length; i++) {
-//       var place = results[i];
-//       createMarker(results[i]);
-//     }
-//   }
-// }
+<script type="text/javascript">
 
 var map;
 var service;
 var request;
 
 function initMap() {
-  var nothardcoded = new google.maps.LatLng(43.2609,-89.9192);
+  var nothardcoded = new google.maps.LatLng(43.2609,-74.9192);
 
   map = new google.maps.Map(document.getElementById('map'), {
       center: nothardcoded,
@@ -92,23 +145,25 @@ function initMap() {
               lat: position.coords.latitude,
               lng: position.coords.longitude
             };
-            map.setCenter(pos);
+
+            map.setCenter(new google.maps.LatLng(pos.lat,pos.lng));
             var marker = new google.maps.Marker({
               position: pos,
               map: map,
-              title: "This Place",
+              title: "Current Location",
               animation: google.maps.Animation.DROP
             });
             
+            search('walmart', map.center);
           });
   }
-  search('walmart', map.center);
+
 }
 
 function search(loca, currentLoca){
   request = {
     location: currentLoca,
-    radius: '5000',
+    radius: 5000,
     query: loca
   };
 
@@ -120,7 +175,8 @@ function createMarker(place) {
 
   new google.maps.Marker({
       position: place.geometry.location,
-      map: map
+      map: map,
+      animation: google.maps.Animation.DROP
   });
 }
 
