--- a/bye.html
+++ b/bye.html
@@ -60,6 +60,14 @@ body, html {height: 100%}
   background: #ccc;
 }
 
+#search{
+  border-radius: 10px;
+}
+
+#btn{
+ border-radius: 10px; 
+}
+
 @media screen and (max-width: 600px) {
   .topnav .search-container {
     float: none;
